--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "temp-simple-nextjs-ts",
+  "name": "temp-website-nextjs-ts",
   "version": "0.1.0",
   "private": true,
   "author": "tsuzuki557",
@@ -7,8 +7,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next build && next export -o dist",
     "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint --fix . --ext .ts,.tsx"
+    "lint:fix": "eslint --fix . --ext .ts,.tsx",
+    "clean": "rimraf dist .next"
   },
   "dependencies": {
     "next": "9.5.5",
@@ -20,11 +22,15 @@
     "@types/react": "^16.9.53",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
+    "babel-plugin-inline-react-svg": "^1.1.1",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.13.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.4",
+    "node-sass-glob-importer": "^5.3.2",
     "prettier": "^2.1.2",
+    "rimraf": "^3.0.2",
+    "sass": "^1.27.0",
     "typescript": "^4.0.3"
   }
 }
